# cwra-vdr

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  RELEASE.md  TO_DO.txt  analyze_ablations.py  best_results.txt  code_for_paper_results.txt  conformal_utils.py  create_cwra_tables.py  cwra.py  cwra_compat.py  cwra_cv.py  cwra_cv_v2.py  make_mol_panel.py  multiple_testing.py  performance_table.tex  pu_conformal.py  pu_descriptors.py  pu_meta_model.py  pu_rn.py  pu_stepA_reliable_negatives.py  pu_stepB2_build_calib_negatives.py  pu_stepB_cwra_bypass.py  pu_stepB_train_meta.py  pu_stepC_conformal_pvalues.py  pu_stepD_weighted_conformal.py  pu_stepE_select.py  pyproject.toml  requirements.txt  results_hyperparameters.csv  run_ablations.py  run_cwra.py  run_pu_conformal_pipeline.py  search_configuration.py  (+4 more)
cwra/: __init__.py  __main__.py  cwra.py
cwra_cv_results/: cwra_cv_comparison.csv  cwra_cv_individual_modalities.csv  cwra_cv_performance.csv  cwra_cv_rankings.csv  cwra_cv_split_info.csv  cwra_cv_weights.csv
cwra_cv_results_cv5/: cwra_cv_cv_folds_baselines.csv  cwra_cv_cv_folds_performance.csv  cwra_cv_cv_folds_weights.csv  cwra_cv_cv_summary.csv
data/: .~lock.composed_modalities_with_rdkit.csv#  README.md  VDR_Molecular_Chemistry_Guide.md  composed_modalities.csv  composed_modalities_tankbind.csv  labeled_raw_modalities.csv  labeled_raw_modalities_extended.csv  unimol_embeddings_failed_smiles.txt
docs/: GITHUB_QUICKSTART.md
examples/: advanced_example.py  basic_example.py  compare_aggregation.py
output/: report_data.json  report_data_slim.json  top100_compounds.csv  vdr_cwra_enrichment_analysis.html
pdb/: 1DB1.pdbqt  vdr_1db1_flex.pdbqt  vdr_1db1_prepared.pdbqt  vdr_1db1_rigid.pdbqt
plot_results/: 01_data_pipeline.py  02_generate_figures.py  concordance_heatmap10_matrix.csv  concordance_heatmap11_matrix.csv  plot_concordance.py  plot_cwra_stats.py
results/: ablation_manifest.json  ablation_summary.json  results_latex_tables.tex
scripts/: 01_data_pipeline.py  02_generate_figures.py  03_generate_html_report.py  check_boltz2.py  compute_additional_modalities.py  compute_all_modalities.py  compute_boltz_vdr.py  compute_drugban_affinity.py  compute_four_modalities_fresh.py  compute_moltrans_affinity.py  compute_rdkit_descriptors.py  compute_tankbind_affinity.py  compute_unimol_similarity.py  cwra_cv_to_latex.py  generate_g_group_pdbs.py  generate_top100_g_pdbs.py  plot_vdr_ranking.py  prepare_1db1_receptor.py  prepare_vina_receptor.py  run_boltz2_predictions.py  run_boltz2_top100.py  run_vina_docking.py  smoke_check.py  test_pharmacophore.py  verify_release.py
tests/: conftest.py  test_conformal_utils.py  test_cwra.py  test_multiple_testing.py  test_pu_descriptors.py  test_pu_meta_model.py  test_pu_rn.py  test_pu_stepA_cli.py  test_pu_stepB_cli.py  test_pu_stepC_cli.py  test_pu_stepD_cli.py  (+3 more)
(+306 files in other folders)
